# AutoPet-Server

./: CMakeLists.txt  README.md  obj.sh  run.sh  server.c
